[package]
name = "stormstriker-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { path = "../crates/sdk" }
memory = { path = "../crates/memory" }
retour = { version = "0.4.0-alpha.2", features = ["static-detour"] }

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
]